prod-croatia-components-main@5916bad7826/unleash/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: unleash
  name: unleash
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
