prod-croatia-components-main@5916bad7826/unleash/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: unleash
  namespace: unleash
spec:
  host: unleash.apps.prod-nonpci-shared.nrapp.cloud
  to:
    kind: Service
    name: unleash
    weight: 100
  port:
    targetPort: 4242
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
